--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
   "manifest_version": 3,
-  "name": "I-need-img - Placeholder Image Downloader",
+  "name": "I need img (Placeholder Image Downloader)",
   "version": "1.0.0",
   "description": "Enter width and height to quickly download placeholder images from fpoimg.com.",
   "action": {
-    "default_title": "I-need-img",
+    "default_title": "I need img",
     "default_popup": "popup.html",
     "default_icon": {
       "16": "assets/icon-16.png",
